Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 
   <ul>
-    <!-- <li>2 slices of bread</li>
+    <li>2 slices of bread</li>
     <li>4 slices of cheese</li>
-    <li>1 tbsp of butter</li> -->
+    <li>1 tbsp of butter</li>
     <li>Spread butter on bread and frying pan</li>
     <li>Place bread in frying pan and fry</li>
     <li>Add cheese on top of bread</li>
