--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <ul>
+  <!-- <ul>
         <li>2 slices of bread</li>
         <li>4 slices of cheese</li>
         <li>1 tbsp of butter</li>
@@ -20,6 +20,12 @@
         </ol>
       </ul>
     </li>
+  </ul> -->
+
+  <ul>
+    <li>2 slices of bread</li>
+    <li>4 slices of cheese</li>
+    <li>1 tbsp of butter</li>
   </ul>
 
 
