--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <li>1 tbsp of butter</li>
     <li>
       <ul>
-
+        <li>cheaddar</li>
+        <li>mozzarella</li>
+        <li>pepper jack</li>
       </ul>
     </li>
   </ul>
